--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,23 @@
     <string name="appwidget_text">EXAMPLE</string>
     <string name="add_widget">Add widget</string>
 
+    <string-array name="stepLabels">
+        <item>CUSTOMER</item>
+        <item>PRODUCT</item>
+        <item>ORDER</item>
+        <item>FINAL</item>
+    </string-array>
+
+
+    <string name="customer_nu">Customer Number</string>
+
+    <string name="customer_na">Customer Name</string>
+    <string name="customer_em">Customer Email</string>
+    <string name="company_nam">Company Name</string>
+    <string name="gstin">GSTIN</string>
+    <string name="address">Address</string>
+
+
     <string name="new_message_notification_title_template">New message: %1$s</string>
 
     <!-- TODO: remove this placeholder text -->
