Offline Order2almost complete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -188,6 +188,8 @@
     <string name="sizelen">Size/Length:</string>
 
     <string name="tool_text">OFFLINE ORDER</string>
+    <string name="total_gross">TOTAL GROSS WEIGHT (gms)</string>
+
 
 
 </resources>
