Updade product sending version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,6 @@
 
     <string name="enter_custo">ENTER CUSTOMER DETAILS</string>
 
+    <string name="add_cart">ADD TO BAG</string>
+
 </resources>
