--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,7 @@
 
     <string name="title_activity_scrollable">SCROLLABLE</string>
     <string name="product_name">Product Name *</string>
+    <string name="seal_melting">Seal &amp; Melting</string>
 
     <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
 
