--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="open">Open</string>
 
     <string name="close">Close </string>
-
+    <string name="done">Return</string>
+    <string name="copy">Copy</string>
     <string name="seal">SEAL </string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
